# gazebo_drillsim

./: README.md
SA_filters/: .clang-format  CMakeLists.txt  package.xml
SA_filters/include/SA_filters/: nav_mode.h
SA_filters/src/: Nav_Mode1.cpp  nav_mode.cpp  nav_mode_main.cpp  ros_pub.cpp
my_rig_control/: CMakeLists.txt  package.xml
my_rig_control/scripts/: Drillbotics.py  autodriller.py
my_robot_control/: CMakeLists.txt  env python.py  package.xml  rig_gui.py
my_robot_control/config/: my_robot_control.yaml
my_robot_control/launch/: fishEye_camera_settings.launch  husky_empty_world.launch  main.launch  my_Rig(1).launch  my_rig.launch  my_robot_control.launch  my_robot_control_test.launch
my_robot_description/: CMakeLists.txt  package.xml
my_robot_description/launch/: rviz.launch  spawn.launch  test.launch
my_robot_description/rviz/: my_robot.rviz  my_robot_main.rviz
my_robot_description/urdf/: inertia.xacro  my_robot.urdf  rig_prototype_1.urdf  rig_prototype_2.urdf  robot.urdf  test.urdf  test_all_written.urdf
